Commit parcial backend

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,5 +1,32 @@
-email.notempty=Email nao deve ser vazio
-cpf.size=O CPF deve possuir exatamente 11 caracteres
 user.name.size=O tamanho do nome do usuario deve ser entre 2 e 100
+user.cpf.size=O CPF deve possuir exatamente 11 caracteres
+user.email.notempty=Email nao deve ser vazio
 user.email.format=O formato do email esta invalido
-campo.notnull=O campo {} deve ser informado
+user.login.notnull=O login  deve ser informado
+user.password.notnull=O password deve ser informado
+
+country.name.notblank=O nome do pais nao deve ser vazio
+country.name.size=O nome do pais deve ter menos do que 80 caracteres
+
+address.country.notnull=O endereco deve possuir um pais
+address.state.notblank=O endereco deve possuir um estado
+address.state.size=O estado deve possuir menos de 80 caracteres
+address.city.notblank=O endereco deve possuir uma cidade
+address.city.size=A cidade deve possuir menos de 80 caracteres
+address.district.notblank=O endereco deve possuir uma rua
+address.district.size=A rua deve possuir menos de 80 caracteres
+address.cep.notblank=O endereco deve possuir um cep
+address.cep.size=O cep deve possuir exatamente 8 caracteres
+address.number.notblank=O endereco deve possuir um numero
+address.number.size=O numero do endereco deve possuir no máximo 5 dígitos
+
+product.name.size=O nome do produto deve ter entre 1 e 50 caracteres
+product.price.positiveOrZero=O preço do produto deve ser maior do que ou igual a 0
+product.quantidadeEstoque.positiveOrZero=A quantidade em estoque deve ser maior ou igual a 0
+product.name.notnull=O nome do produto nao pode ser nulo
+product.quantityInStock.notnull=A quantidade em estoque do produto nao pode ser nula
+product.price.notnull = O preco do produto nao deve ser nulo
+
+book.title.notnull=O titulo do livro nao deve ser nulo
+book.title.size=O titulo do livro deve possuir menos de 100 caracteres
+book.author.size=O nome do autor do livro deve possuir menos de 100 caracteres
